# Ringo-Android

./: .gitignore  LICENSE  README.md  build.gradle  import-summary.txt  settings.gradle
YoYoAnimation/: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/HORIZON/res/drawable/: camera_mode_photo.xml  camera_switch.xml  iv_album.xml  iv_ble.xml  iv_capture.xml
app/src/HORIZON/res/layout/: activity_main.xml
app/src/HORIZON/res/values/: strings.xml
app/src/Ringo/res/drawable/: iv_switch_tracking.xml  rounded_corners.xml
app/src/Ringo/res/layout/: activity_main.xml  text.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: camera_mode_video.xml  iv_capture.xml  iv_record.xml  rectviewborder.xml  ripple_click_effect.xml
app/src/main/res/layout/: activity_main.xml  bluetooth_devices_list_cell.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
audioengine/: build.gradle
audioengine/src/main/: AndroidManifest.xml
audioengine/src/main/res/values/: strings.xml
blecommunication/: build.gradle
blecommunication/src/main/: AndroidManifest.xml
blecommunication/src/main/res/values/: strings.xml
bletoolkit/: build.gradle
bletoolkit/src/main/: AndroidManifest.xml
bletoolkit/src/main/res/layout/: activity_change_name.xml  activity_main.xml  bluetooth_devices_list_cell.xml
bletoolkit/src/main/res/values/: strings.xml
cameraengine/: build.gradle
cameraengine/src/main/: AndroidManifest.xml
cameraengine/src/main/res/values/: strings.xml
cmttracker/: CMakeLists.txt  build.gradle
cmttracker/src/androidTest/java/io/github/gaomjun/cmttracker/: ExampleInstrumentedTest.java
cmttracker/src/main/: AndroidManifest.xml
cmttracker/src/main/java/io/github/gaomjun/cmttracker/: CMTTracker.java  CMTTracker.kt
cmttracker/src/main/jni/cmt/: CMT.cpp  cmt_tracker.cpp
cmttracker/src/main/jni/cmt2/: CMT.cpp  CMT.h  Matcher.cpp  cmt_tracker.cpp
cmttracker/src/main/res/values/: strings.xml
cmttracker/src/test/java/io/github/gaomjun/cmttracker/: ExampleUnitTest.java
cvcamera/: build.gradle
cvcamera/src/main/: AndroidManifest.xml
cvcamera/src/main/res/values/: strings.xml
easypermissions/: build.gradle
extensions/: build.gradle
extensions/src/main/: AndroidManifest.xml
gallary/: build.gradle  proguard-rules.pro
gallary/src/main/: AndroidManifest.xml
gallary/src/main/res/layout/: activity_gallary_grid.xml  activity_gallary_slider.xml  gallary_grid_cell.xml  viewpager_image_view.xml
gl/: build.gradle
gl/src/main/: AndroidManifest.xml
gl/src/main/jni/: CMakeLists.txt  ColorConverter.cpp
glh264encoder/: build.gradle
glh264encoder/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
librtmp/: CMakeLists.txt  build.gradle
librtmp/src/androidTest/java/io/github/gaomjun/rtmpclient/: ExampleInstrumentedTest.java
librtmp/src/main/: AndroidManifest.xml
librtmp/src/main/java/io/github/gaomjun/rtmpclient/: RTMPNative.kt
librtmp/src/main/jni/: Android.mk  Application.mk  rtmpnative.cpp
librtmp/src/main/jni/pili-librtmp/: CMakeLists.txt
librtmp/src/main/jni/pili-librtmp.bak/: log.h  rtmp.c
librtmp/src/main/res/values/: strings.xml
librtmp/src/test/java/io/github/gaomjun/rtmpclient/: ExampleUnitTest.java
libyuv/: CMakeLists.txt  build.gradle
libyuv/src/androidTest/java/io/github/gaomjun/libyuv/: ExampleInstrumentedTest.java
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/java/io/github/gaomjun/libyuv/: YUVNative.java
libyuv/src/main/jni/: yuvnative.cpp
libyuv/src/test/java/io/github/gaomjun/libyuv/: ExampleUnitTest.java
live/: build.gradle
live/src/main/: AndroidManifest.xml
motionorientation/: build.gradle
motionorientation/src/main/: AndroidManifest.xml
openCVLibrary310/: build.gradle
openCVLibrary320/: build.gradle
recorder/: build.gradle
recorder/src/main/: AndroidManifest.xml
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
testaudioengine/: build.gradle  proguard-rules.pro
testaudioengine/src/main/: AndroidManifest.xml
testcameraengin/: build.gradle
testcameraengin/src/main/: AndroidManifest.xml
testcameraglpreview/: build.gradle  proguard-rules.pro
testcameraglpreview/src/main/: AndroidManifest.xml
testgl/: build.gradle
testgl/src/main/: AndroidManifest.xml
timelabel/: build.gradle
timelabel/src/main/: AndroidManifest.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
yuv_decoder/: CMakeLists.txt  build.gradle
yuv_decoder/src/androidTest/java/io/github/gaomjun/yuvdecoder/: ExampleInstrumentedTest.java
yuv_decoder/src/main/: AndroidManifest.xml
yuv_decoder/src/main/java/io/github/gaomjun/yuvdecoder/: YUVDecoder.java
yuv_decoder/src/main/jni/yuv_decoder/: yuv_decoder.cpp
yuv_decoder/src/main/res/values/: strings.xml
yuv_decoder/src/test/java/io/github/gaomjun/yuvdecoder/: ExampleUnitTest.java
(+165 files in other folders)
